--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
   },
   "author": "kanaf",
   "license": "ISC",
-  "dependencies": {}, 
+  "dependencies": {},
   "devDependencies": {
-    "lite-server": "^1.3.1"
+    "gulp": "^3.9.1",
+    "gulp-browserify": "^0.5.1",
+    "gulp-rename": "^1.2.2",
+    "lite-server": "^1.3.4"
   },
   "description": ""
 }
